  * Drop patches included upstream:
     - makeinfo.patch
     - Fix-spelling.patch
  * Update Change-symbol-versioning.patch.
  * Adapt the packaging to the changed library soversions.
  * Generalize ffmpeg.lintian-overrides with wildcards.
  * Add debian/missing-sources with the sources of the minified CSS files in 
    the upstream tarball.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Tue, 12 Aug 2014 18:22:14 +0200

ffmpeg (7:2.3.1-1) experimental; urgency=medium

  * Import new upstream release 2.3.1. (Closes: #729203)
     - Fix integer overflow in LZO code. (CVE-2014-4610)
  * Fix FTBFS in Ubuntu caused by the -Bsymbolic-functions linker flag.
    Thanks to Guillaume Martres for pointing out the fix that Fabian Greffrath
    created for the Libav package.
  * Don't ignore test failures anymore, since gcc-4.9 has been fixed to
    compile FFmpeg correctly. (see #746944)
  * Enable libdc1394 only on linux. This fixes FTBFS on !linux-any.
  * Use wildcards instead of multiarch paths and sonames in lintian
    overrides.
  * Fix building on hurd (patch included upstream in 2.2.3).
  * Improve the description of the debug package.
  * Drop fix-tests.patch. Instead export the LD_LIBRARY_PATH in debian/rules.
  * Improve the comment in debian/copyright, explaining the effective license
    of the binary packages.
  * Change 'Comments:' to the correct 'Comment:' in debian/copyright.
  * Add some missing files to debian/copyright.
  * Call the upstream Makefile from debian/rules to build the apidoc
    instead of calling the doxy-wrapper directly.
  * Add _FFMPEG to the symbol versions of the libraries to ensure that there
    is no confusion, if a binary is linked against FFmpeg and another shared
    library, which is linked against Libav.
  * Update patches to apply cleanly to 2.3.
  * Add new symbols to the .symbols files.
  * Update lintian overrides.
  * Include config.log in the build-log, when configure fails.