@@ -8,8 +8,12 @@ Standards-Version: 3.9.5
 Vcs-Git: git://anonscm.debian.org/collab-maint/ffmpeg.git
 Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/ffmpeg.git
 Build-Depends-Indep:
+# needed to minify the CSS files
+ cleancss,
 # Autogenerated documentation
- doxygen
+ doxygen,
+# needed to create the CSS files for the HTML manuals
+ node-less
 Build-Depends:
 # needed for some tests: fate-swr-resample-*, fate-acodec-*
  bc,
