@@ -151,11 +151,20 @@ override_dh_auto_configure:
 override_dh_auto_clean:
 	[ ! -f config.mak ] || make distclean
 	[ ! -d doc/examples/pc-uninstalled ] || rm -r doc/examples/pc-uninstalled
+	# Restore backed up CSS files
+	[ ! -f debian/bootstrap.min.css.bak ] || mv debian/bootstrap.min.css.bak doc/bootstrap.min.css
+	[ ! -f debian/style.min.css.bak ] || mv debian/style.min.css.bak doc/style.min.css
 
 # Create doxygen documentation:
 override_dh_auto_build-indep:
 	# Use faketime, because doxygen embeds the creation date.
 	$(FT) dh_auto_build -i -- apidoc
+	# Backup the minified CSS files distributed by upstream.
+	mv doc/bootstrap.min.css debian/bootstrap.min.css.bak
+	mv doc/style.min.css debian/style.min.css.bak
+	# Create the minified CSS files.
+	lessc debian/missing-sources/bootstrap/less/bootstrap.less | cleancss | cat debian/missing-sources/bootstrap_copyright_notice.txt - > doc/bootstrap.min.css
+	lessc debian/missing-sources/ffmpeg-web/src/less/style.less | cleancss > doc/style.min.css
 
 override_dh_auto_build-arch:
 	# Build qt-faststart here, to make it possible to build with 'nocheck'.
