@@ -26,6 +26,9 @@ ffmpeg (7:2.4-1) UNRELEASED; urgency=medium
   * Generalize ffmpeg.lintian-overrides with wildcards.
   * Add debian/missing-sources with the sources of the minified CSS files in 
     the upstream tarball.
+  * Create the minified CSS files during package build instead of using the
+    ones shipped in the tarball.
+    For this add cleancss and node-less to Build-Depends-Indep.
 
  -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Tue, 12 Aug 2014 18:22:14 +0200
 
